--- a/native/services/inputflinger/CMakeLists.txt
+++ b/native/services/inputflinger/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 3.8)
 
+include_directories(../../../native/include)
 
-add_library(inputflinger "InputManager.cpp" "InputManager.h" "EventHub.h" "InputDispatcher.h" "InputReader.h")
+add_library(inputflinger EventHub.h InputDispatcher.h InputManager.cpp InputManager.h InputReader.h InputListener.h)
