--- a/frameworks/base/services/core/CMakeLists.txt
+++ b/frameworks/base/services/core/CMakeLists.txt
@@ -1,1 +1,9 @@
-add_library(core "com_android_server_input_InputManagerService.cpp")
+cmake_minimum_required(VERSION 3.8)
+
+
+include_directories(../../../../../aosp/libcore/include)
+
+include_directories(../../../../native/services)
+
+
+add_library(core com_android_server_input_InputManagerService.cpp)
