--- a/frameworks/base/services/core/jni/CMakeLists.txt
+++ b/frameworks/base/services/core/jni/CMakeLists.txt
@@ -9,4 +9,4 @@ include_directories(../../../../../../aosp/libnativehelper/include_jni)
 include_directories(../../../../native/services)
 
 
-add_library(core com_android_server_input_InputManagerService.cpp ../../../core/jni/android_os_MessageQueue.h ../../../core/jni/android_view_InputChannel.cpp ../../../core/jni/android_view_InputEventReceiver.cpp)
+add_library(core com_android_server_input_InputManagerService.cpp ../../../core/jni/android_os_MessageQueue.h ../../../core/jni/android_view_InputChannel.cpp ../../../core/jni/android_view_InputEventReceiver.cpp ../../../core/jni/android_os_MessageQueue.cpp)
