--- a/frameworks/native/services/inputflinger/CMakeLists.txt
+++ b/frameworks/native/services/inputflinger/CMakeLists.txt
@@ -9,4 +9,4 @@ add_library(inputflinger reader/include/EventHub.h dispatcher/InputDispatcher.h 
         reader/InputReader.cpp ../../libs/input/Input.cpp reader/mapper/InputMapper.h dispatcher/include/InputDispatcherThread.h
         reader/include/InputDevice.h reader/EventHub.cpp ../../include/android/input.h reader/mapper/KeyboardInputMapper.cpp
         reader/mapper/KeyboardInputMapper.h reader/InputDevice.cpp InputListener.cpp dispatcher/include/InputDispatcherInterface.h
-        dispatcher/include/InputDispatcherPolicyInterface.h dispatcher/InputDispatcher.cpp dispatcher/Entry.h dispatcher/Queue.h ../../include/input/InputWindow.h ../../include/input/InputApplication.h ../../include/input/InputTransport.h dispatcher/Connection.h ../../include/android/looper.h ../../libs/input/InputTransport.cpp)
+        dispatcher/include/InputDispatcherPolicyInterface.h dispatcher/InputDispatcher.cpp dispatcher/Entry.h dispatcher/Queue.h ../../include/input/InputWindow.h ../../include/input/InputApplication.h ../../include/input/InputTransport.h dispatcher/Connection.h ../../include/android/looper.h ../../libs/input/InputTransport.cpp ../../../../system/core/libutils/Looper.cpp)
